# oarepo-upload-cli

./: .env-example  .gitignore  README.md  format.sh  pyproject.toml  run-tests.sh  run_tests.sh  setup.cfg  setup.py  test.crt  test.key  test.sh
.github/workflows/: build.yaml  push.yaml
oarepo-upload-cli/: abstract_record.py  abstract_record_source.py  entry_points_loader.py  repository_data_extractor.py  token_auth.py  upload.py
oarepo_upload_cli/: abstract_file.py  abstract_metadata.py  abstract_record.py  abstract_record_source.py  abstract_repository_records_handler.py  authentication_token_parser.py  config.py  dry_run.py  entry_points_loader.py  exceptions.py  main.py  oarepo_upload.ini  repository.py  repository_communication_exception.py  repository_data_extractor.py  repository_records_handler.py  source.py  test.py  test_record.py  test_source.py  token_auth.py  types.py  upload.py  uploader.py  utils.py
oarepo_upload_cli/auth/: bearer_auth.py  token_auth.py
oarepo_upload_cli/base/: abstract_file.py  abstract_record.py  abstract_record_source.py  abstract_repository_records_handler.py  dry_run.py  record_file.py  repository.py  repository_client.py  source.py
oarepo_upload_cli/invenio/: client.py  connection.py  record.py
oarepo_upload_cli/repository/: data_extractor.py  url_builder.py
oarepo_upload_cli/uploader/: __init__.py
tests/: conftest.py  model.yaml  oarepo_upload.ini  repository.py  source.py  test.py  test_config_parsing.py  test_record.py  test_records_handler.py  test_token_parsing.py  test_upload.py
tests/model/: setup.cfg
tests/model_tests/: test.py  test_file.py  test_record.py  test_records_handler.py  (+3 more)
uct_theses/: compile.sh  custom_fields.yaml  definitions.yaml  files.yaml  install.sh  metadata.yaml  model.yaml  setup.cfg
uct_theses/tests/: conftest.py  test_resource.py  test_service.py
uct_theses/tests/files/: conftest.py  test_files_resources.py
uct_theses/uct_theses/: cli.py  config.py  ext.py  proxies.py  views.py
uct_theses/uct_theses.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
uct_theses/uct_theses/alembic/: uct_theses_1_create_uct_theses_branch_for_uct_theses.py  uct_theses_2_initial_revision.py
uct_theses/uct_theses/files/: api.py  dumper.py  models.py
uct_theses/uct_theses/models/: model.json  ui.json
uct_theses/uct_theses/records/: api.py  dumper.py  models.py  multilingual_dumper.py
uct_theses/uct_theses/records/jsonschemas/: uct_theses-1.0.0.json
uct_theses/uct_theses/records/mappings/os-v2/uct_theses/: uct_theses-1.0.0.json
uct_theses/uct_theses/resources/files/: config.py  resource.py  ui.py
uct_theses/uct_theses/resources/records/: config.py  resource.py  ui.py
uct_theses/uct_theses/services/files/: config.py  schema.py  service.py  ui_schema.py
uct_theses/uct_theses/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py  ui_schema.py
uct_theses/uct_theses/translations/: messages.pot
uct_theses/uct_theses/translations/cs/LC_MESSAGES/: messages.mo  messages.po
uct_theses/uct_theses/translations/en/LC_MESSAGES/: messages.mo  messages.po
(+34 files in other folders)
