[metadata]
name = "oarepo-upload-cli"
version = 0.0.1

[options]
install_requires =
    argparse
    pyenv
    requests
    importlib-metadata; python_version < "3.9"

[options.entry_points]
console_scripts =
    oarepo-upload = oarepo-upload-cli.upload:main
dependencies =
    oarepo-upload-source = tests.source:TestSource
    oarepo-upload-record = tests.record:TestRecord