[metadata]
name = oarepo-upload-cli
version = 1.0.0
description =
authors = Juraj Trappl <juraj.trappl@techlib.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >= 3.9
install_requires =
    argparse
    pyenv
    requests
    importlib_metadata
packages = find:

[options.entry_points]
console_scripts =
    oarepo_upload = oarepo-upload-cli.upload:main
oarepo_upload_cli.dependencies =
    oarepo_upload_test_source = tests.test_source:TestSource
    oarepo_upload_test_record = tests.test_record:TestRecord