[metadata]
name = oarepo-upload-cli
version = 1.0.0
description =
authors = Juraj Trappl <juraj.trappl@techlib.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >= 3.9
install_requires =
    click
    requests
    tqdm
    importlib_metadata
packages = find:

[options.entry_points]
console_scripts =
    oarepo_upload = oarepo_upload_cli.upload:main
oarepo_upload_cli.dependencies =
    oarepo_upload_test_source = oarepo_upload_cli.test_source:TestSource
    oarepo_upload_test_record = oarepo_upload_cli.test_record:TestRecord