

[metadata]
name = uct-theses
version = 1.0.0
description = A sample application for uct_theses
authors = 


[options]
python = >=3.9
install_requires =
    oarepo-runtime>=1.0.0
    nr-metadata>=1.0.0
    nr-vocabularies>=1.0.0
    oarepo>=11,<12
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps =
    uct_theses = uct_theses.ext:UctThesesExt
    uct_theses_file = uct_theses.ext:UctThesesFileExt
invenio_base.apps =
    uct_theses = uct_theses.ext:UctThesesExt
    uct_theses_file = uct_theses.ext:UctThesesFileExt
invenio_db.alembic = uct_theses = uct_theses:alembic
invenio_db.models = uct_theses = uct_theses.records.models
invenio_base.api_blueprints =
    uct_theses = uct_theses.views:create_blueprint_from_app_uct_theses
    uct_theses_file = uct_theses.views:create_blueprint_from_app_uct_theses_file
invenio_base.blueprints =
    uct_theses = uct_theses.views:create_blueprint_from_app_uct_thesesExt
    uct_theses_file = uct_theses.views:create_blueprint_from_app_uct_theses_fileExt
invenio_search.mappings = uct_theses = uct_theses.records.mappings
invenio_jsonschemas.schemas = uct_theses = uct_theses.records.jsonschemas
oarepo.models = uct_theses = uct_theses.models:model.json
flask.commands = uct_theses = uct_theses.cli:group
invenio_i18n.translations = uct_theses = uct_theses
oarepo.ui = uct_theses = uct_theses.models:ui.json